# simple-django-api

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
django_improved_view/: compat.py  error_code.py  exceptions.py  permissions.py  request.py  response.py  views.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  simple_django_api.jwt.rst  simple_django_api.rst  usage.rst
simple_django_api/: __init__.py  compat.py  consts.py  errors.py  exceptions.py  permissions.py  request.py  response.py  utils.py  views.py  webargs.py
simple_django_api/file/: settings.py  storage.py
simple_django_api/jwt/: __init__.py  auth.py  consts.py  middleware.py  settings.py  utils.py
simple_django_api/utils/: logging.py  random.py  settings.py  string.py
tests/: __init__.py  conftest.py  test_jwt.py  test_permission.py  test_permissions.py  test_storage.py  urls.py
tests/business/: conftest.py  test_django_simple_api.py
tests/demo_app/: exceptions.py  permissions.py  settings.py  urls.py  views.py
tests/request/django_2x/: __init__.py  test_all.py  test_data_upload_settings.py  test_patched_request.py
tests/request/django_3x/: conftest.py  test_accept_header.py  test_data_upload_settings.py  test_patched_request.py  tests.py
tests/requests/: test_all.py  test_data_upload_settings.py  test_patched_request.py
