[metadata]
name = simple_django_api
version = attr: simple_django_api.__version__
license = BSD
author = Abraham
author_email = abraham.liu@hotmail.com
description = simple rest api support for django
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities

[options]
packages  = find:
include_package_data = true
python_requires = >= 3.6

[flake8]
exclude = docs, tests

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
testpaths = tests
